@@ -14,7 +14,7 @@ dnl
 dnl The version in the next line is the only one to set
 dnl
 
-AM_INIT_AUTOMAKE(cfengine, 2.1.19p1)   dnl remember to set version
+AM_INIT_AUTOMAKE(cfengine, 2.1.20)   dnl remember to set version
 
 AM_CONFIG_HEADER(src/conf.h)
 
